# cbzlint

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: build.yml
src/: bedetheque.rs  cbz.rs  error.rs  main.rs  metadata.rs  searx.rs  termio.rs
