[package]
name = "cbzlint"
version = "0.2.2-alpha.0"
description = "CLI tool to check CBZ naming"
authors = ["Teh Uncle Dolan"]
license = "BSD-3-Clause"
edition = "2018"
repository = "https://github.com/TehUncleDolan/cbzlint"
readme = "README.md"
publish = false

[dependencies]
anyhow       = { version = "1.0", default-features = false, features = ["std"]  }
imagesize    = { version = "0.8", default-features = false }
kamadak-exif = { version = "0.5", default-features = false }
kuchiki      = { version = "0.8", default-features = false }
once_cell    = { version = "1.5", default-features = false }
regex        = "1.0"
serde        = { version = "1.0", default-features = false, features = ["derive"] }
termcolor    = { version = "1.0", default-features = false }
ureq         = { version = "2.0", default-features = false, features = ["json", "tls"] }
url          = { version = "2.0", default-features = false, features = ["serde"] }
zip          = { version = "0.5", default-features = false }
