[package]
name = "cbzlint"
version = "0.2.6-alpha.0"
description = "CLI tool to check CBZ naming"
authors = ["Teh Uncle Dolan"]
license = "BSD-3-Clause"
edition = "2018"
repository = "https://github.com/TehUncleDolan/cbzlint"
readme = "README.md"
publish = false

[dependencies]
anyhow = "1.0"
imagesize = "0.8"
kamadak-exif = "0.5"
kuchiki = "0.8"
once_cell = "1.5"
regex = "1.0"
serde = { version = "1.0",  features = ["derive"] }
termcolor= "1.0"
ureq = { version = "2.0", features = ["json"] }
url = { version = "2.0", features = ["serde"] }
zip = "0.5"
